--- a/customer-dashboard.html
+++ b/customer-dashboard.html
@@ -6,6 +6,14 @@
 
   <link rel="stylesheet" href="/css/style.css">
 
+  <!-- 🔐 ROUTE PROTECTION -->
+  <script>
+    if (!localStorage.getItem("customerLoggedIn")) {
+      alert("Please login to view your applications");
+      window.location.href = "/customer-login.html";
+    }
+  </script>
+
   <style>
     body {
       background:#f4f6f8;
@@ -139,58 +147,61 @@
 </footer>
 
 <script>
-if (!localStorage.getItem("customerLoggedIn")) {
-  alert("Please login to view your applications");
-  window.location.href = "/customer-login.html";
-}
+  const mobile = localStorage.getItem("loginMobile");
 
-const mobile = localStorage.getItem("loginMobile");
+  const newPanTable = document.getElementById("newPan");
+  const corrTable = document.getElementById("corr");
 
-const newPanTable = document.getElementById("newPan");
-const corrTable = document.getElementById("corr");
+  async function loadApplications() {
+    try {
+      const res = await fetch(`/api/customer/applications/${mobile}`);
+      const data = await res.json();
 
-async function loadApplications() {
-  try {
-    console.log("Fetching for mobile:", mobile);
+      // NEW PAN
+      newPanTable.innerHTML = "";
+      if (!data.newPan || data.newPan.length === 0) {
+        newPanTable.innerHTML = `<tr><td colspan="2">No applications found</td></tr>`;
+      } else {
+        data.newPan.forEach(app => {
+          newPanTable.innerHTML += `
+            <tr>
+              <td>${app._id}</td>
+              <td><span class="status ${app.status}">${app.status}</span></td>
+            </tr>`;
+        });
+      }
 
-    const res = await fetch(`/api/customer/applications/${mobile}`);
-    const data = await res.json();
+      // CORRECTION
+      corrTable.innerHTML = "";
+      if (!data.correction || data.correction.length === 0) {
+        corrTable.innerHTML = `<tr><td colspan="2">No applications found</td></tr>`;
+      } else {
+        data.correction.forEach(app => {
+          corrTable.innerHTML += `
+            <tr>
+              <td>${app._id}</td>
+              <td><span class="status ${app.status}">${app.status}</span></td>
+            </tr>`;
+        });
+      }
 
-    /* NEW PAN */
-    newPanTable.innerHTML = "";
-    if (!data.newPan || data.newPan.length === 0) {
-      newPanTable.innerHTML = `<tr><td colspan="2">No applications found</td></tr>`;
-    } else {
-      data.newPan.forEach(app => {
-        newPanTable.innerHTML += `
-          <tr>
-            <td>${app._id}</td>
-            <td><span class="status ${app.status}">${app.status}</span></td>
-          </tr>`;
-      });
+    } catch (err) {
+      console.error(err);
+      alert("Failed to load applications");
     }
-
-    /* CORRECTION */
-    corrTable.innerHTML = "";
-    if (!data.correction || data.correction.length === 0) {
-      corrTable.innerHTML = `<tr><td colspan="2">No applications found</td></tr>`;
-    } else {
-      data.correction.forEach(app => {
-        corrTable.innerHTML += `
-          <tr>
-            <td>${app._id}</td>
-            <td><span class="status ${app.status}">${app.status}</span></td>
-          </tr>`;
-      });
-    }
-
-  } catch (err) {
-    console.error(err);
-    alert("Failed to load applications");
   }
-}
 
-loadApplications();
+  function logout() {
+    localStorage.removeItem("customerLoggedIn");
+    localStorage.removeItem("loginMobile");
+    location.href = "/customer-login.html";
+  }
+
+  function goBack() {
+    location.href = "/services.html";
+  }
+
+  loadApplications();
 </script>
 
 </body>
