--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 <footer>
   © 2026 MyDream PAN | <a href="privacy.html" style="color:#fff;">Privacy Policy</a>
 </footer>
-
+  
+<!-- deploy trigger -->
+  
 </body>
 </html>
